@@ -1,3 +1,6 @@
+2022-05-07
+    * Removed dependency on qt5compat when building with Qt6
+
 2022-04-22
     * Using QGuiApplication::setDesktopFileName to fix the wrong icon in KDE+Wayland
 
